--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Comparison</title>
-    <script>
-        // Inject environment variables into the window object
-        window.FIREBASE_API_KEY = "your-firebase-api-key";
-        window.FIREBASE_AUTH_DOMAIN = "your-firebase-auth-domain";
-        window.FIREBASE_PROJECT_ID = "your-firebase-project-id";
-        window.FIREBASE_STORAGE_BUCKET = "your-firebase-storage-bucket";
-        window.FIREBASE_MESSAGING_SENDER_ID = "your-firebase-messaging-sender-id";
-        window.FIREBASE_APP_ID = "your-firebase-app-id";
-        window.FIREBASE_MEASUREMENT_ID = "your-firebase-measurement-id";
-    </script>
 </head>
 <body>
     <!-- Your page content -->
+    <h1>House Comparison</h1>
+    <button id="fetchHousesBtn">Fetch Houses</button>
+    <div id="houseData"></div>
+
+    <!-- JavaScript file that interacts with backend API -->
     <script src="main.js"></script>
 </body>
 </html>
